# tfgha

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.run  README.md  pb  pr  pyproject.toml  terraform.tfstate
.github/workflows/: terraform.yml  terrform-deploy.yml  terrform.yml
data/: nfl_article.txt
data/seasons/: 2023_season_stats.txt
data/weeks/: 2023_week_1.txt  2023_week_10.txt  2023_week_11.txt  2023_week_12.txt  2023_week_13.txt  2023_week_14.txt  2023_week_15.txt  2023_week_16.txt  2023_week_17.txt  2023_week_18.txt  2023_week_2.txt  2023_week_3.txt  2023_week_4.txt  2023_week_5.txt  2023_week_6.txt  2023_week_7.txt  2023_week_8.txt  2023_week_9.txt
src/tfgha/: app.py  articles_app.py  seasons_app.py  th.py  weeks_app.py
terraform/: hello.py  id_rsa.pub  main.tf  outputs.tf  setup.sh  terraform.tfstate  terraform.tfstate.backup  tfplan  userdata.sh
tests/: test_app.py
