[tool.poetry]
name = "tfgha"
version = "0.1.0"
description = ""
authors = ["Andy Miles <akmiles@icloud.com>"]
readme = "README.md"
packages = [{include = "tfgha", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.1.3"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
